--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 h1{
-        font-family: cursive;}
+        font-family: Arial, Helvetica, sans-serif;}
 body{
     background-color:rgb(180, 180, 180); ;
 }
